# DIY-MIDI-METRONOME.public

./: .gitignore  README.md
.github/workflows/: hugo.yml  midi-viewer-native-build.yml
config/_default/: config.toml  menu.toml
content/hardware/: _index.md
content/overview/: _index.md
content/software/: _index.md
documentation-github-page/: .gitignore  README.md
documentation-github-page/assets/scss/: custom.scss
documentation-github-page/config/_default/: menu.toml  params.toml
documentation-github-page/content/: site-index.md
documentation-github-page/content/hardware/: _index.md  bluetooth.md  esp32s3.md  reference-design.md
documentation-github-page/content/me/: index.md
documentation-github-page/content/midi/: _index.md  midi-CC.md
documentation-github-page/content/overview/: _index.md
documentation-github-page/content/software/: _index.md  cascading-ble-sync.md  midi-clock-to-pendulum.md  midi-monitor.md  usb-midi-class-compliance.md
documentation-github-page/content/timeline/: _index.md
documentation-github-page/layouts/: index.html
documentation-github-page/layouts/_default/: list.html
documentation-github-page/layouts/partials/: site-index-blurb.html
documentation-github-page/layouts/partials/components/: div-content-right-section.html  div-content-right-section_.html
documentation-github-page/layouts/partials/footer/: accordion-script.html
documentation-github-page/layouts/partials/sidebar/: right-sidebar.html  right.html
documentation-github-page/layouts/shortcodes/: site-index.html  video.html
layouts/_default/: baseof.html
layouts/partials/article/components/: header.html
layouts/partials/components/: accordion.html
layouts/partials/nav/: subsection-tree.html
layouts/partials/slice/: difference.html
layouts/shortcodes/: accordion.html
software/midi-viewer/: index.html  midi-monitor.css  midi-monitor.js  viewer-glue.js  web-midi-bridge.js
software/midi-viewer-native/: CMakeLists.txt
software/midi-viewer-native/src/: main.cpp
software/midi-viewer-native/src/bridge/: MidiInputBridge.cpp  MidiInputBridge.h
software/midi-viewer-native/src/midi/: MidiInputService.cpp  MidiInputService.h
software/midi-viewer-native/tools/: embed_resources.py
static/css/: accordion.css
